# cookiecutter-pypackages

./: README.md  cookiecutter.json
{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  LICENSE  Taskfile.yaml  mkdocs.yaml  mkdocs.yml  pyproject.toml
{{ cookiecutter.package_name }}/.github/: FUNDING.yml
{{ cookiecutter.package_name }}/.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
{{ cookiecutter.package_name }}/.github/workflows/: publish.yml  test-suite.yml
{{ cookiecutter.package_name }}/docs/: contributing.md  missing-translation.md  release-notes.md  sponsorship.md
{{ cookiecutter.package_name }}/docs/en/: mkdocs.yml
{{ cookiecutter.package_name }}/docs/en/docs/: contributing.md  index.md
{{ cookiecutter.package_name }}/docs/en/docs/stylesheets/: extra.css
{{ cookiecutter.package_name }}/scripts/: check  clean  docs_pipeline.py  install  lint  publish
